[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui-assets/1920x1080_white.svg" type="Texture" id=1]
[ext_resource path="res://ui-assets/building-machinedrawer.svg" type="Texture" id=2]
[ext_resource path="res://Levels/Level3/Level3HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level3/Level3Drawer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level3/Level3.gd" type="Script" id=5]
[ext_resource path="res://Levels/Level3/Level3Grid.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/conveyor_straight.svg" type="Texture" id=7]
[ext_resource path="res://assets/conveyor_curved_ccw.svg" type="Texture" id=8]
[ext_resource path="res://assets/conveyor_curved_cw.svg" type="Texture" id=9]

[node name="Level3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="DrawerBackground" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Level3HUD" parent="." instance=ExtResource( 3 )]

[node name="Level3Drawer" parent="." instance=ExtResource( 4 )]

[node name="Level3Grid" parent="." instance=ExtResource( 6 )]

[node name="belt" type="Node" parent="."]

[node name="ConveyorStraight" type="Sprite" parent="belt"]
position = Vector2( 631, 290 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="ConveyorCurvedCcw" type="Sprite" parent="belt"]
position = Vector2( 632, 455 )
rotation = 3.14159
texture = ExtResource( 8 )

[node name="ConveyorCurvedCw" type="Sprite" parent="belt"]
position = Vector2( 962, 456 )
rotation = 1.5708
texture = ExtResource( 9 )

[node name="ConveyorCurvedCcw2" type="Sprite" parent="belt"]
position = Vector2( 630, 956 )
rotation = -3.14159
texture = ExtResource( 8 )

[node name="ConveyorCurvedCcw3" type="Sprite" parent="belt"]
position = Vector2( 1790, 456 )
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ConveyorStraight2" type="Sprite" parent="belt"]
position = Vector2( 965, 623 )
rotation = -3.14159
texture = ExtResource( 7 )

[node name="ConveyorCurvedCw2" type="Sprite" parent="belt"]
position = Vector2( 961, 790 )
rotation = 3.14159
texture = ExtResource( 9 )

[node name="ConveyorCurvedCcw4" type="Sprite" parent="belt"]
position = Vector2( 630, 789 )
rotation = -1.5708
texture = ExtResource( 8 )

[node name="ConveyorStraight3" type="Sprite" parent="belt"]
position = Vector2( 795, 956 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight4" type="Sprite" parent="belt"]
position = Vector2( 961, 957 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight5" type="Sprite" parent="belt"]
position = Vector2( 1292, 957 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorStraight6" type="Sprite" parent="belt"]
position = Vector2( 1127, 957 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="ConveyorCurvedCcw5" type="Sprite" parent="belt"]
position = Vector2( 1625, 957 )
rotation = 1.5708
texture = ExtResource( 8 )

[node name="ConveyorStraight7" type="Sprite" parent="belt"]
position = Vector2( 1625, 790 )
texture = ExtResource( 7 )

[node name="ConveyorStraight8" type="Sprite" parent="belt"]
position = Vector2( 1796, 290 )
texture = ExtResource( 7 )

[node name="ConveyorStraight9" type="Sprite" parent="belt"]
position = Vector2( 1625, 623 )
texture = ExtResource( 7 )

[node name="ConveyorCurvedCw3" type="Sprite" parent="belt"]
position = Vector2( 1625, 456 )
rotation = 5.56363e-08
texture = ExtResource( 9 )
